# QProject

./: .gitignore  settings.gradle
app/: build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/res/layout/: activity_main.xml
common/: build.gradle
common/src/main/: AndroidManifest.xml
common/src/main/assets/: qproject.p12
feature/: build.gradle
feature/src/main/: AndroidManifest.xml
feature/src/main/res/layout/: activity_bitmap.xml  activity_cache.xml  activity_feature.xml  activity_login.xml
flight/: build.gradle
flight/src/main/: AndroidManifest.xml
flight/src/main/res/drawable/: avd.xml  battery.xml  ic_system_help.xml
flight/src/main/res/layout/: activity_flight.xml
home/: build.gradle
home/src/main/: AndroidManifest.xml
home/src/main/cpp/: CMakeLists.txt  bsdiff.c  bsdiff.h  bspatch.c  bspatch.h
home/src/main/cpp/bzip2/: CMakeLists.txt
home/src/main/res/layout/: activity_classloader.xml  activity_main.xml  activity_smartupdate.xml  listitem_render.xml
home/src/main/res/values/: strings.xml
hotel/: build.gradle
hotel/src/main/: AndroidManifest.xml
hotel/src/main/assets/: qproject.p12  qproject.truststore
hotel/src/main/res/layout/: activity_bitmap.xml  activity_cache.xml  activity_hotel.xml  activity_list.xml  (+4 more)
knowledge/: build.gradle
knowledge/src/main/: AndroidManifest.xml
main/: build.gradle
main/src/main/: AndroidManifest.xml
main/src/main/cpp/: bsdiff.c
rn/: build.gradle
rn/src/main/: AndroidManifest.xml
test/src/main/: AndroidManifest.xml
ui/: build.gradle
ui/src/main/: AndroidManifest.xml
(+178 files in other folders)
